Fixes #133